<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/Linear"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.agomez.ejerciciorandom.MainActivity">


    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_alignLeft="@+id/N1"
            android:layout_alignRight="@+id/restar"
            android:textSize="30dp"
            android:textAlignment="center"
            android:background="@drawable/pantalla"/>

        <Button
            android:id="@+id/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:layout_below="@+id/resultado"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/limpiar"
            android:text="@string/dividir"
            android:layout_below="@+id/resultado"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dividir"
            android:text="@string/multiplicar"
            android:layout_below="@+id/resultado"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/multiplicar"
            android:text="B"
            android:layout_below="@+id/resultado"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />


        <Button
            android:id="@+id/N1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N1"
            android:layout_below="@+id/borrar"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/N1"
            android:text="@string/N2"
            android:layout_below="@+id/borrar"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/N2"
            android:text="@string/N3"
            android:layout_below="@+id/borrar"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/N3"
            android:text="@string/restar"
            android:layout_below="@+id/borrar"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/N4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N1"
            android:text="@string/N4"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N1"
            android:layout_toRightOf="@id/N4"
            android:text="@string/N5"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N1"
            android:layout_toRightOf="@id/N5"
            android:text="@string/N6"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N1"
            android:layout_toRightOf="@id/N6"
            android:text="@string/sumar"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/N7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N4"
            android:text="@string/N7"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N4"
            android:layout_toRightOf="@id/N7"
            android:text="@string/N8"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/N9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N4"
            android:layout_toRightOf="@id/N8"
            android:text="@string/N9"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/N0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N7"
            android:text="@string/N0"
            android:height="80dp"
            android:width="175dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/coma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N7"
            android:layout_toRightOf="@id/N0"
            android:text="@string/coma"
            android:height="80dp"
            android:width="80dp"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/N4"
            android:layout_toRightOf="@id/N9"
            android:text="@string/igual"
            android:height="160dp"
            android:width="80dp"
            android:onClick="onClick"
            />
    </RelativeLayout>
</LinearLayout>
